--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,20 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>by.gsu.epamlab</groupId>
   <artifactId>todo-app</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>todo-app Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <docker.image.prefix>springbootapp</docker.image.prefix>
+  </properties>
+  
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.0.1.RELEASE</version>
+  </parent>
 
   <dependencies>
     <dependency>
@@ -16,18 +26,12 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Servlet Library -->
+    <!-- Spring dependencies-->
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
-      <scope>provided</scope>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
+
     <!-- Mysql Driver-->
     <dependency>
       <groupId>mysql</groupId>
@@ -39,17 +43,22 @@
   <build>
     <finalName>todoapp</finalName>
     <plugins>
-      <!-- Config: Maven Tomcat Plugin -->
-      <!-- http://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat7-maven-plugin%20-->
+      <!-- For containerizing to Docker -->
       <plugin>
-        <groupId>org.apache.tomcat.maven</groupId>
-        <artifactId>tomcat7-maven-plugin</artifactId>
-        <version>2.2</version>
-        <!-- Config: contextPath and Port (Default - /todoapp : 8080) -->
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+        <version>1.3.6</version>
         <configuration>
-            <path>/</path>
-            <port>9000</port>
+          <repository>${docker.image.prefix}/${project.artifactId}</repository>
+          <buildArgs>
+            <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+          </buildArgs>
         </configuration>
+      </plugin>
+      <!-- Spring Boot Maven plugin-->
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
